--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
         <meta charset="utf-8"/>
 
         <!-- Set the title bar of the page -->
-        <title>Created with GameMaker: Studio</title>
+        <title>HATPC Reborn Alpha 0.1.0</title>
 
         <!-- Set the background colour of the document -->
         <style>
             body {
-              background: #000000;
-              color:#cccccc;
               margin: 0px;
               padding: 0px;
               border: 0px;
@@ -71,6 +69,19 @@
     </head>
 
     <body>
+	<h1>
+	    Hannah and the Pirate Caves Reborn
+	</h1>
+	<h3> Alpha 0.1.0 </h3>
+	<h4>
+	    Changes from Alpha 0.0.1:
+	</h4>
+	<ul>
+	<li> Converted from object-based collision and rending to tile-based rendering and grid-based collisions </li>
+	<li> Added support for CaveMaker level format (although there's currently no way to load user levels) </li>
+	<li> Added the particle that appears when you break a gem </li>
+	<li> You can no longer crouch in midair (you have to be crouching when you jump to remain crouching in midair) </li>
+	</ul>
         <div class="gm4html5_div_class" id="gm4html5_div_id">
             <!-- Create the canvas element the game draws to -->
             <canvas id="canvas" width="600" height="440">
@@ -79,6 +90,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/HATPC.js?ETWXB=1214998601"></script>
+        <script type="text/javascript" src="html5game/HATPC.js?QCDZB=1166347869"></script>
     </body>
 </html>
