--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta charset="utf-8"/>
 
         <!-- Set the title bar of the page -->
-        <title>HATPC Reborn Alpha 0.1.1</title>
+        <title>HATPC Reborn Alpha 0.1.0</title>
 
         <!-- Set the background colour of the document -->
         <style>
@@ -79,6 +79,6 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/HATPC.js?RWIYB=811705820"></script>
+        <script type="text/javascript" src="html5game/HATPC.js?QCDZB=1166347869"></script>
     </body>
 </html>
